[gd_scene load_steps=8 format=3 uid="uid://7ow8pvwom6tj"]

[ext_resource type="Texture2D" uid="uid://bk8t505gp6ldp" path="res://assets/sprite/robot/robot.png" id="1_fmr1x"]
[ext_resource type="Script" uid="uid://dp874faj8ol6h" path="res://src/enemys/robot.gd" id="1_q1o4y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ci558"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fmr1x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_orgks"]
radius = 59.6825

[sub_resource type="Animation" id="Animation_yd5qf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8ifdx"]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnayo"]
_data = {
&"RESET": SubResource("Animation_yd5qf"),
&"damage": SubResource("Animation_8ifdx")
}

[node name="robot" type="Area2D" groups=["enemys"]]
script = ExtResource("1_q1o4y")

[node name="s" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ci558")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_orgks")

[node name="damageanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnayo")
}

[node name="explosion" type="Marker2D" parent="."]
position = Vector2(-1, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="lockFalse" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="death" from="." to="." method="_on_death"]
[connection signal="animation_finished" from="damageanim" to="." method="_on_damageanim_animation_finished"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="lockFalse" to="." method="_on_lock_false_timeout"]
